syntax = "proto3";

package emdash.agent;

import "google/protobuf/empty.proto";

option go_package = "github.com/emdashhq/emdash-server/api/proto/agent";

service AgentService {
  rpc StartAgent(StartAgentRequest) returns (StartAgentResponse);
  rpc SendMessage(SendMessageRequest) returns (google.protobuf.Empty);
  rpc StopAgent(StopAgentRequest) returns (google.protobuf.Empty);
  rpc GetAgentStatus(GetAgentStatusRequest) returns (GetAgentStatusResponse);
}

message StartAgentRequest {
  string workspace_id = 1;
  string provider = 2;
  repeated string args = 3;
  string cwd = 4;
  map<string, string> env = 5;
}

message StartAgentResponse {
  string agent_id = 1;
  int32 pid = 2;
}

message SendMessageRequest {
  string workspace_id = 1;
  string message = 2;
}

message StopAgentRequest {
  string workspace_id = 1;
}

message GetAgentStatusRequest {
  string workspace_id = 1;
}

enum AgentStatus {
  AGENT_STATUS_UNSPECIFIED = 0;
  AGENT_STATUS_STARTING = 1;
  AGENT_STATUS_RUNNING = 2;
  AGENT_STATUS_STOPPED = 3;
  AGENT_STATUS_ERROR = 4;
}

message GetAgentStatusResponse {
  AgentStatus status = 1;
  int32 pid = 2;
  string error_message = 3;
}
